test/failing/spaces_in_declarations.sml
(* t-compile: *)
(* This should definitely fail. *)
valx=1
